# linkedin-insighthub

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: .dockerignore  Makefile  README.md  config.yaml  main.py  postman_collection.json  pyproject.toml
backend/application/interfaces/: author_ranker.py  post_projector.py  post_wordcloud_projector.py  search_index_builder.py  search_index_lookup.py  search_index_repository.py  snippet_builder.py
backend/application/use_cases/: compute_projection.py  compute_word_cloud.py  get_popular_authors.py  get_posts.py  save_posts.py  search_posts.py
backend/docker/: Dockerfile
backend/domain/entities/: author.py  post.py  search.py  user_id.py
backend/domain/interfaces/: post_repository.py
backend/infrastructure/: author_ranker.py  bertopic_post_projector.py  post_repository.py  search_index_builder.py  search_index_looker.py  search_index_repository.py  simple_author_ranker.py  simple_snippet_builder.py  simple_tokenizer.py  simple_wordcloud_projector.py
backend/infrastructure/fastapi/: common.py  compute_projection_api.py  compute_word_cloud_api.py  entities.py  fastapi.py  get_posts_api.py  save_posts_api.py  search_posts_api.py
backend/playground/: bertopic_projection_demo.ipynb  linkedin-saved-posts.json  search_demo.py  wordcloud_projection_demo.ipynb
backend/tests/application/use_cases/: search_posts.py
backend/tests/infrastructure/: test_bertopic_post_projector.py  test_simple_wordcloud_projector.py
backend/tests/infrastructure/fastapi/: test_fastapi.py
frontend/: App.tsx  Makefile  api.ts  (+6 more)
(+8 files in other folders)
